# rinha-2026-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.arm64.yml  docker-compose.smoke.yml  docker-compose.yml  haproxy.cfg  info.json
.github/workflows/: publish-image.yml
data/: answers.idx  answers.map
docker/: entrypoint.sh
resources/: example-payload-fraud.json  example-payload-legit.json  example-references.json  mcc_risk.json  normalization.json
scripts/: build-index.sh  check-compose-budget.sh  eval-official.sh  k6-local-arm64.sh  k6-local.ps1  k6-local.sh  smoke-compose.sh  smoke-local.sh
src/: answers.rs  build_answers.rs  build_index.rs  eval.rs  http.rs  index.rs  main.rs  parser.rs  vector.rs
submission/: docker-compose.yml  haproxy.cfg  info.json
test/: test.js
